--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "title": "Countdown",
   "description": "Countdown component",
-  "defaultLocale": "pt-BR",
+  "defaultLocale": "es-MX",
   "builders": {
     "messages": "1.x",
     "store": "0.x",
